tests/ui/associated-consts/ambiguous-associated-type-error-issue-78622.rs
#![crate_type = "lib"]

struct S;
fn f() {
    S::A::<f> {}
    //~^ ERROR ambiguous associated type
}

// https://github.com/rust-lang/rust/issues/78622
